--- a/relatorio/templates/base.html
+++ b/relatorio/templates/base.html
@@ -7,12 +7,26 @@
     <title>Listagem</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet">
 </head>
-    <nav class="navbar navbar-light bg-light">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="#">
-                <img src="{% static 'images.png' %}" alt="" width="65" height="65">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div>
+            <a class="navbar-brand" href="#" align="center">
+                <img src="{% static 'images.png' %}" width="50" height="50" align="center">
             </a>
+        </div>
+        <a class="navbar-brand" href="#">Navbar</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Alterna navegação">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+         <div class="collapse navbar-collapse" id="navbarNavAltMarkup" align="right">
+            <div class="navbar-nav">
+              <a class="nav-item nav-link active" href="#">Home <span class="sr-only"></span></a>
+              <a class="nav-item nav-link" href="#">Destaques</a>
+              <a class="nav-item nav-link" href="#">Preços</a>
+              <a class="nav-item nav-link disabled" href="#">Desativado</a>
+            </div>
         </div>
     </nav>
     <hr>
