--- a/relatorio/templates/forms.html
+++ b/relatorio/templates/forms.html
@@ -9,21 +9,23 @@
         <form action="{% url 'processa_formulario' %}" method="post">
             {% csrf_token %}
             <div class="row mb-3">
-                <label class="col-md-5" align="right" for="sistema" >Sistema:</label>
+                <label class="col-md-5" align="right" for="sist" >Sistema:</label>
                 <div class="col-md-3">
-                    <select class="form-select" id="sistema" name="sistema">
-                        <option selected>Escolha o sistema</option>
-                        <option value="Vida">Vida</option>
-                        <option value="Sol">Sol</option>
-                        <option value="Casa">Casa</option>
-                        <option value="Divino">Divino</option>
+                    <select class="form-select" id="sist" name="sist">
+                        {% if sistema %}
+                        {% for i in sistema %}
+                            <option value={{ i.codigo }}>{{i.nome_sistema}}</option>
+                        {% endfor %}
+                        {% else %}
+                            <option value="">Sem sistema</option>
+                        {% endif %}
                     </select>
                 </div>
             </div>
             <div class="row mb-3">
                 <label align="right" class="col-md-5" for="carteira">Carteira:</label>
                 <div class="col-md-3">
-                    <select class="form-select" id="carteira" name="carteira">
+                    <select class="form-select" id="carteira" name="carteira" required>
                         <option selected>Escolha a carteira</option>
                         <option value="Bradesco">Bradesco</option>
                         <option value="Itau">Itau</option>
@@ -35,7 +37,7 @@
             <div class="row mb-3">
                 <label class="col-md-5" align="right" for="ocorrencia">Ocorrência:</label>
                 <div class="col-md-3">
-                    <input type="number" class="form-control" id="ocorrencia" name="ocorrencia" placeholder="Digite o número da ocorrência">
+                    <input type="number" class="form-control" id="ocorrencia" name="ocorrencia" placeholder="Digite o número da ocorrência" required>
                 </div>
             </div>
             <div class="row mb-3">
