--- a/relatorio/templates/listagem.html
+++ b/relatorio/templates/listagem.html
@@ -1,35 +1,98 @@
 {% extends 'base.html' %}
 {% block content %}
 {% load static %}
-   <div class="container">
-            <div class="row">
-                <div class="col-12">
-                    <form action="{% url 'buscar' %}">
+<link rel="stylesheet" href="{% static 'css/listagem.css' %}">
+    <div class="container text-center">
+    <div class="row justify-contente-start">
+    <div class="row align-items-center">
+    <div class="col">
+        <div class="row">
+                <div class="col-12 search-div">
+                    <form method="GET" id="search-form">
                         <div class="input-group mb-3">
-                            <input type="text" name="buscar" class="form-control" placeholder="Buscar registro" aria-label="Recipient's username" aria-describedby="button-addon2">
+                            <input type="text" name="buscar" class="form-control" placeholder="Buscar carteira" required>
+                            <input type="hidden" name="ordenar" value="{{ordenar}}">
                             <button class="btn btn-outline-secondary" type="submit" id="button-addon2">Buscar</button>
                         </div>
                     </form>
                 </div>
             </div>
-        </div>
-    </div>
-
-    <div class="container text-center">
-    <div class="row justify-contente-start">
-    <div class="row align-items-center">
-    <div class="col">
     <table class="table table-striped" id="tabela-listar">
         <thead>
             <tr>
-              <th scope="col">Sistema</th>
-              <th scope="col">Carteira</th>
-              <th scope="col">Ocorrência</th>
-              <th scope="col">ALO</th>
-              <th scope="col">CPC</th>
-              <th>
-                  <form action="{% url 'buscar' %}">
-                    <button type="submit" name="ordenar" value="ocorrencia" id="botao1"><span class="material-icons"></span></button>
+              <th scope="col">
+                  <form method="GET">
+                      Sistema
+                      <input type="hidden" name="buscar" value="{{buscar}}">
+                      {% if urlx == '-sist' %}
+                      <button class="btn btn-light" type="submit" name="ordenar" value="sist">
+                          <span class="material-icons">arrow_drop_up</span>
+                      </button>
+                      {% else %}
+                        <button class="btn btn-light" type="submit" name="ordenar" value="-sist">
+                            <span class="material-icons">arrow_drop_down</span>
+                        </button>
+                      {% endif %}
+                  </form>
+              </th>
+              <th scope="col">
+                  <form method="GET">
+                      Carteira
+                       <input type="hidden" name="buscar" value="{{buscar}}">
+                       {% if urlx == '-carteira' %}
+                        <button class="btn btn-light"type="submit" name="ordenar" value="carteira">
+                            <span class="material-icons">arrow_drop_up</span>
+                        </button>
+                      {% else %}
+                        <button class="btn btn-light" type="submit" name="ordenar" value="-carteira">
+                            <span class="material-icons">arrow_drop_down</span>
+                        </button>
+                      {% endif %}
+                  </form>
+              </th>
+              <th scope="col">
+                  <form method="GET">
+                      Ocorrência
+                      <input type="hidden" name="buscar" value="{{buscar}}">
+                      {% if urlx == '-ocorrencia' %}
+                        <button  class="btn btn-light" type="submit" name="ordenar" value="ocorrencia">
+                            <span class="material-icons">arrow_drop_up</span>
+                        </button>
+                      {% else %}
+                        <button class="btn btn-light" type="submit" name="ordenar" value="-ocorrencia">
+                            <span class="material-icons">arrow_drop_down</span>
+                        </button>
+                      {% endif %}
+                  </form>
+              </th>
+              <th scope="col">
+                  <form method="GET">
+                      ALO
+                      <input type="hidden" name="buscar" value="{{buscar}}">
+                    {% if urlx == '-alo' %}
+                        <button class="btn btn-light" type="submit" name="ordenar" value="alo">
+                            <span class="material-icons">arrow_drop_up</span>
+                        </button>
+                      {% else %}
+                        <button class="btn btn-light" type="submit" name="ordenar" value="-alo">
+                            <span class="material-icons">arrow_drop_down</span>
+                        </button>
+                      {% endif %}
+                  </form>
+              </th>
+              <th scope="col">
+                  <form method="GET">
+                      CPC
+                      <input type="hidden" name="buscar" value="{{buscar}}">
+                      {% if urlx == '-cpc' %}
+                        <button class="btn btn-light" type="submit" name="ordenar" value="cpc">
+                            <span class="material-icons">arrow_drop_up</span>
+                        </button>
+                      {% else %}
+                        <button class="btn btn-light" type="submit" name="ordenar" value="-cpc">
+                            <span class="material-icons">arrow_drop_down</span>
+                        </button>
+                      {% endif %}
                   </form>
               </th>
             </tr>
@@ -38,7 +101,7 @@
         {% if registros %}
         {% for registro in registros %}
             <tr>
-              <th>{{ registro.sistema }}</th>
+              <th>{{ registro.sist }}</th>
               <td>{{registro.carteira}}</td>
               <td>{{registro.ocorrencia}}</td>
               <td>{{registro.alo}}</td>
@@ -46,7 +109,9 @@
               <td>
                   <form action="{% url 'deletar' registro.id %}" method="POST">
                       {% csrf_token %}
-                      <input type="submit" class="btn btn-danger" value="Deletar">
+                      <button type="submit" class="btn btn-light">
+                        <span class="material-icons">delete_forever</span>
+                      </button>
                   </form>
               </td>
             </tr>
@@ -59,7 +124,9 @@
         </tbody>
     </table>
         <div class="d-grid gap-2 col-6 mx-auto">
-            <a href="{% url 'forms' %}"><button class="btn btn-primary" type="button">Adicionar novo registro</button></a>
+            <a href="{% url 'forms' %}"><button class="btn btn-outline-dark" type="button" align="center">
+                Adicionar novo registro
+            </button></a>
         </div>
     </div>
     </div>
