--- a/relatorio/templates/sist_novo.html
+++ b/relatorio/templates/sist_novo.html
@@ -1,7 +1,20 @@
 {% extends 'base.html' %}
 {% load static %}
 {% block content %}
-
-    
-
+<link rel="stylesheet" href="{% static 'css/forms.css' %}">
+    <div class="container" align="center">
+        <h3 align="center">Cadastrar novo sistema</h3>
+        <br>
+        <hr>
+<form action="{% url 'processa_sist' %}" method="post">{% csrf_token %}
+  <div class="form-group row">
+    <label for="sist" class="col-sm-2 col-form-label">Nome do novo sistema</label>
+    <div class="col-sm-8">
+      <input type="text" class="form-control" id="sist" name="nome_sistema" placeholder="Nome do novo sistema">
+    </div>
+    <div class="col-sm-2">
+    <button type="submit" class="btn btn-outline-dark">Enviar</button>
+    </div>
+  </div>
+</form>
 {% endblock %}
