--- a/relatorio/templates/base.html
+++ b/relatorio/templates/base.html
@@ -22,10 +22,11 @@
         </button>
          <div class="collapse navbar-collapse" id="navbarNavAltMarkup" align="right">
             <div class="navbar-nav">
-              <a class="nav-item nav-link active" href="#">Home <span class="sr-only"></span></a>
-              <a class="nav-item nav-link" href="#">Destaques</a>
-              <a class="nav-item nav-link" href="#">Preços</a>
-              <a class="nav-item nav-link disabled" href="#">Desativado</a>
+              <a class="nav-item nav-link" href="/lista_classificacao">Classificações</a>
+              <a class="nav-item nav-link" href="/lista_sistema">Sistemas</a>
+              <a class="nav-item nav-link" href="/lista_carteira">Carteiras</a>
+              <a class="nav-item nav-link" href="/lista_ocorrencia">Ocorrências</a>
+              <a class="nav-item nav-link" href="/test">test</a>
             </div>
         </div>
     </nav>
