--- a/relatorio/templates/base.html
+++ b/relatorio/templates/base.html
@@ -2,13 +2,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- Meta tags Obrigatórias -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <!--Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+
+    <!-- icones google -->
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
     <title>Listagem</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
-      rel="stylesheet">
 </head>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div>
@@ -20,27 +24,41 @@
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Alterna navegação">
             <span class="navbar-toggler-icon"></span>
         </button>
-         <div class="collapse navbar-collapse" id="navbarNavAltMarkup" align="right">
-            <div class="navbar-nav">
-              <a class="nav-item nav-link" href="/lista_classificacao">Classificações</a>
-              <a class="nav-item nav-link" href="/lista_sistema">Sistemas</a>
-              <a class="nav-item nav-link" href="/lista_carteira">Carteiras</a>
-              <a class="nav-item nav-link" href="/lista_ocorrencia">Ocorrências</a>
-            </div>
+         <div class="collapse navbar-collapse" id="navbarSupportedContent" align="right">
+            <ul class="navbar-nav mr-auto">
+              <li class="nav-item">
+                <a class="nav-item nav-link" href="/lista_classificacao">Classificações</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-item nav-link" href="/lista_sistema">Sistemas</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-item nav-link" href="/lista_carteira">Carteiras</a>
+              </li>
+              <div class="dropdown">
+                <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="false">
+                    Ocorrências
+                </a>
+
+                <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+                    <li><a class="dropdown-item" href="/lista_ocorrencia">Lista de ocorrências</a></li>
+                    <li><a class="dropdown-item" href="/ocorrencia_nova/">Nova ocorrência</a></li>
+                </ul>
+              </div>
+            </ul>
         </div>
     </nav>
     <hr>
 <body>
     {% block content %} {% endblock %}
-   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
-
-   <script src="{% static 'js/jquery-3.6.3.min.js' %}"></script>
 
     <!-- Bloco destinado aos scripts para cada página -->
     {% block scripts %}
 
     {% endblock %}
 
+    <!-- Bootstrap JS -->
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
 </body>
 </html>
