--- a/relatorio/templates/carteira_nova.html
+++ b/relatorio/templates/carteira_nova.html
@@ -6,15 +6,29 @@
         <h3 align="center">Cadastrar nova carteira ou alterar antiga</h3>
         <br>
         <hr>
-<form action="{% url 'processa_carteira' %}" method="post">{% csrf_token %}
+{% if carteira %}
+<form action="{% url 'editar_carteira' carteira.cod_carteira %}" method="post">{% csrf_token %}
   <div class="form-group row">
     <label for="carteira" class="col-sm-2 col-form-label">Nome da carteira</label>
     <div class="col-sm-8">
-      <input type="text" class="form-control" id="carteira" name="nome_carteira" placeholder="Nome da carteira">
+      <input type="text" class="form-control" id="carteira" name="nome_carteira" value="{{carteira.nome_carteira}}">
     </div>
     <div class="col-sm-2">
     <button type="submit" class="btn btn-outline-dark">Enviar</button>
     </div>
   </div>
 </form>
+{% endif %}
+<form action="{% url 'processa_carteira'  %}" method="get">{% csrf_token %}
+  <div class="form-group row">
+    <label class="col-sm-2 col-form-label">Nome da carteira</label>
+    <div class="col-sm-8">
+      <input type="text" class="form-control"  name="nome_carteira" placeholder="Nome da carteira">
+    </div>
+    <div class="col-sm-2">
+    <button type="submit" class="btn btn-outline-dark">Enviar</button>
+    </div>
+  </div>
+</form>
+
 {% endblock %}
