Mesmo HTML funcionando para update e create.

--- a/relatorio/templates/base.html
+++ b/relatorio/templates/base.html
@@ -35,16 +35,15 @@
               <li class="nav-item">
                 <a class="nav-item nav-link" href="/lista_carteira">Carteiras</a>
               </li>
-              <div class="dropdown">
-                <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="false">
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                     Ocorrências
                 </a>
-
-                <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                     <li><a class="dropdown-item" href="/lista_ocorrencia">Lista de ocorrências</a></li>
                     <li><a class="dropdown-item" href="/ocorrencia_nova/">Nova ocorrência</a></li>
                 </ul>
-              </div>
+              </li>
             </ul>
         </div>
     </nav>
