--- a/relatorio/templates/listagem.html
+++ b/relatorio/templates/listagem.html
@@ -1,6 +1,5 @@
 {% extends 'base.html' %}
 {% block content %}
-{% load static %}
     <div class="container text-center">
     <div class="row justify-contente-start">
     <div class="row align-items-center">
@@ -75,8 +74,8 @@
                  {% endif %}
              </td>
              <td>
-                 {% if pk == 'cod_carteira' %}
-                 <form method="GET" action="{% url 'update_carteira' registro.cod_carteira %}">
+                 {% if pk == 'num_ocorrencia' %}
+                 <form method="GET" action="{% url 'update_ocorrencia' registro.num_ocorrencia %}">
     		            <button type="submit" class="btn btn-light">
          		            <span class="material-icons">create</span>
     		            </button>
