Todos os CRUDs funcionando

--- a/relatorio/templates/base.html
+++ b/relatorio/templates/base.html
@@ -26,14 +26,32 @@
         </button>
          <div class="collapse navbar-collapse" id="navbarSupportedContent" align="right">
             <ul class="navbar-nav mr-auto">
-              <li class="nav-item">
-                <a class="nav-item nav-link" href="/lista_classificacao">Classificações</a>
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    Classificações
+                </a>
+                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                    <li><a class="dropdown-item" href="/lista_classificacao">Lista de classificações</a></li>
+                    <li><a class="dropdown-item" href="/classificacao_nova/">Nova classificação</a></li>
+                </ul>
               </li>
-              <li class="nav-item">
-                <a class="nav-item nav-link" href="/lista_sistema">Sistemas</a>
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    Sistemas
+                </a>
+                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                    <li><a class="dropdown-item" href="/lista_sistema">Lista de sistemas</a></li>
+                    <li><a class="dropdown-item" href="/sistema_novo/">Novo sistema</a></li>
+                </ul>
               </li>
-              <li class="nav-item">
-                <a class="nav-item nav-link" href="/lista_carteira">Carteiras</a>
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    Carteiras
+                </a>
+                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                    <li><a class="dropdown-item" href="/lista_carteira">Lista de carteiras</a></li>
+                    <li><a class="dropdown-item" href="/carteira_nova/">Nova carteira</a></li>
+                </ul>
               </li>
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
