--- a/relatorio/templates/classificacao_nova.html
+++ b/relatorio/templates/classificacao_nova.html
@@ -1,21 +1,28 @@
 {% extends 'base.html' %}
 {% load static %}
 {% block content %}
-<link rel="stylesheet" href="{% static 'css/forms.css' %}">
-    <div class="container" align="center">
-        <h3 align="center">Cadastrar nova ocorrência</h3>
-        <br>
+        {% if messages %}
+            {% for i in messages %}
+                <div class="alert {{ i.tags }} alert-dismissible fade show" role="alert">
+                    {{i}}
+                    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                </div>
+            {% endfor %}
+        {% endif %}
+{% load crispy_forms_tags %}
+    <div class="container" align="center" style="width: 30%; height: 30%;">
+        <h3 align="center">Classificação</h3>
         <hr>
     {% if classificacao %}
         <form method="POST" action=".">
             {% csrf_token %}
-            {{ form.as_p }}
+            {{ form|crispy }}
             <button type="submit" class="btn btn-outline-dark">Atualizar</button>
         </form>
     {% else %}
         <form method="POST" action="{% url 'create_classificacao' %}">
             {% csrf_token %}
-            {{ form.as_p }}
+            {{ form|crispy }}
             <button type="submit" class="btn btn-outline-dark">Enviar</button>
         </form>
     </div>
