--- a/relatorio/templates/base.html
+++ b/relatorio/templates/base.html
@@ -17,8 +17,7 @@
     <div class="container">
         <header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-4 border-bottom">
             <a class="navbar-brand link-secondary" href="#" align="center">
-                <img src="{% static 'images.png' %}" width="32" height="32" align="center">
-                Sua Empresa
+                <img src="{% static 'images.png' %}" width="32" height="32" align="center"> Sua Empresa
             </a>
 
             <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
